# Eldiron

./: .gitignore  3dconcept.md  BuilderGraphDesignGuide.md  Cargo.toml  Changelog.md  Changelog.txt  Eldiron.icns  License.txt  Readme.md  StarterProject.eldiron  Todov1.md  Untitled.eldiron  Untitled2.eldiron  Untitled3.eldiron  eldiron-source-concept.md  justfile  screen_backup.rs
client/: Cargo.toml
client/src/: main.rs
client_standalone/: Cargo.toml
client_standalone/src/: main.rs
client_standalone_web/: Cargo.toml  Readme.md  index.html
client_standalone_web/src/: main.rs
clients/client/: Cargo.toml  Readme.md
clients/client-terminal/: Cargo.toml  README.md
clients/client-terminal/src/: main.rs
clients/client-wgpu/: Cargo.toml  README.md
clients/client-wgpu/src/: app.rs  lib.rs  main.rs
clients/client/src/: client.rs  main.rs  misc.rs
clients/solo/: Cargo.toml  Readme.md
clients/solo/embedded/: Harbor.eldiron  Hideout2D.eldiron
clients/solo/src/: main.rs  misc.rs  solo.rs
core_render/: Cargo.toml
core_render/src/: draw2d.rs  lib.rs  lighting.rs  raycast.rs  render.rs  script_shapes.rs  script_types.rs
core_server/: Cargo.toml
core_server/src/: asset.rs  draw2d.rs  gamedata.rs  lib.rs  script_types.rs  server.rs
core_server/src/gamedata/: behavior.rs  game.rs  game_screen.rs  item.rs  nodes.rs  nodes_area.rs  nodes_game.rs  nodes_utility.rs  region.rs  script.rs  spell.rs
core_server/src/server/: lobby.rs  message.rs  nodes.rs  nodes_area.rs  nodes_behavior.rs  nodes_game.rs  nodes_utilities.rs  region_data.rs  region_instance.rs  region_pool.rs  region_utlity.rs  scope_buffer.rs  script_utilities.rs  sheet_utilities.rs  user.rs  utilities.rs
core_shared/: Cargo.toml
core_shared/src/: actions.rs  asset.rs  characterdata.rs  currency.rs  date.rs  dir.rs  experience.rs  gear.rs  inventory.rs  items.rs  lib.rs  light.rs  lightdata.rs  message.rs  property.rs  regiondata.rs  scope_buffer.rs  script.rs  server.rs  settings_region.rs  sheet.rs  skills.rs  spells.rs  state.rs  structs.rs  undo.rs  update.rs  value.rs  weapons.rs
core_shared/src/asset/: image.rs  tilemap.rs  tileset.rs
crates/buildergraph/: Cargo.toml  README.md
crates/buildergraph/examples/: bush_cluster.buildergraph  campfire.buildergraph  fence.buildergraph  grass_patch.buildergraph  surface_border.buildergraph  surface_columns.buildergraph  surface_detail_border.buildergraph  surface_freestanding_columns.buildergraph  surface_masonry.buildergraph  table.buildergraph  torch_stand.buildergraph  tree_grove.buildergraph  wall_column_opening.buildergraph  wall_column_series.buildergraph  wall_columns.buildergraph  wall_columns_masonry.buildergraph  wall_lantern.buildergraph  wall_masonry.buildergraph  wall_torch.buildergraph
crates/buildergraph/src/: lib.rs  main.rs
crates/icon_builder/: Cargo.toml
crates/icon_builder/src/: main.rs
crates/organicgraph/: Cargo.toml  README.md
crates/organicgraph/examples/: moss.organicgraph  paint_default.organicgraph  tree.organicgraph  vines.organicgraph
crates/organicgraph/src/: lib.rs  main.rs
crates/ruleset/: Cargo.toml  README.md
crates/ruleset/rulesets/: manifest.toml
crates/ruleset/src/: cli.rs  lib.rs  main.rs
crates/rusterix/: Cargo.toml  LICENSE-MIT  Readme.md  main.rusteria  make_textures.rusteria  render_settings_example.toml
crates/rusterix/examples/: cube.rs  cube_shaded.rs  map.rs  minigame.rs  obj.rs
crates/rusterix/rusteria/: Cargo.toml  README.md
crates/rusterix/src/: avatar.rs  avatar_builder.rs  builderpreview.rs  chunk.rs  collision_world.rs  command.rs  edge.rs  hitinfo.rs  intodata.rs  lib.rs  material_library.rs  material_profile.rs  particleharness.rs  procedural.rs  rasterizer.rs  ray.rs  rect.rs  render_settings.rs  rendermode.rs  rusterix.rs  scene.rs  scene_build_index.rs  scene_handler.rs  scenemanager.rs  texture.rs  utils.rs  value.rs  value_toml.rs  vertexblend.rs  wavefront.rs
crates/scenevm/: Cargo.toml  README.md
crates/scenevm/cornell/: Cargo.toml
crates/scenevm/embedded/: 2d_body.wgsl  2d_header.wgsl  3d_body.wgsl  3d_header.wgsl  noise_shader.wgsl  sdf_body.wgsl  sdf_header.wgsl  ui_body.wgsl
crates/scenevm/run-wasm/: Cargo.toml
crates/scepter/: Cargo.toml
crates/shared/: Cargo.toml  README.md
crates/source/: Cargo.toml
crates/theframework/: Cargo.toml  License.txt  Readme.md
crates/tilegraph/: Cargo.toml  Readme.md
crates/tilegraph-cli/: Cargo.toml
crates/tilegraph-render/: Cargo.toml
creator/: Cargo.toml  README.md
creator/embedded/: basecharacter.py  starter_project.eldiron
creator/src/: _lib.rs  actionlist.rs  avatar_atlas.rs  browser.rs  brushlist.rs  codeeditor.rs  configeditor.rs  customcamera.rs  dockmanager.rs  editcamera.rs  editor.rs  effectpicker.rs  externals.rs  game.rs  hud.rs  i18n.rs  infoviewer.rs  iso_paint_brush.rs  lib.rs  macros.rs  main.rs  mapeditor.rs  materialeditor.rs  materialpicker.rs  minimap.rs  misc.rs  modeleditor.rs  modelfxeditor.rs  nodeeditor.rs  panels.rs  previewview.rs  project.rs  region.rs  regionfxeditor.rs  regionmodeler.rs  regionrender.rs  rendereditor.rs  scepter.rs  screeneditor.rs  self_update.rs  (+20 more)
creator_lib/: Cargo.toml  rust.h
creator_lib/src/: editor.rs  lib.rs  widget.rs
creator_main/: Cargo.toml
creator_main/src/: main.rs
server/: Cargo.toml
server/src/: asset.rs  draw2d.rs  gamedata.rs  lib.rs  main.rs  script_types.rs
shared/: Cargo.toml
shared/src/: area.rs  asset.rs  bsdf.rs  camera.rs  character.rs  context.rs  effectwrapper.rs  eucdraw.rs  fx.rs  gamecanvas.rs  geofxnode.rs  geofxobject.rs  heightmap.rs  item.rs  level.rs  lib.rs  map.rs  map_geometry.rs  maprender.rs  materialfxnode.rs  materialfxobject.rs  modelfx.rs  modelfxfloor.rs  modelfxnode.rs  modelfxstore.rs  modelfxterminal.rs  modelfxwall.rs  patterns.rs  polyrender.rs  prerendered.rs  prerenderthread.rs  project.rs  ray_shape.rs  region.rs  regionfx.rs  regionfxnode.rs  regionfxobject.rs  renderedregion.rs  renderer.rs  renderer_utils.rs  (+17 more)
solo/: Cargo.toml
solo/src/: main.rs  misc.rs  solo.rs
(+1127 files in other folders)
