[workspace]

members = ["creator", "run-wasm", "crates/shared", "clients/client", "clients/client-wgpu", "clients/client-terminal", "crates/rusterix", "crates/rusterix/rusteria", "crates/rusterix/codegridfx/lib", "crates/theframework", "crates/scenevm", "crates/tilegraph", "crates/organicgraph"]
resolver = "2"

[workspace.dependencies]
theframework = { path = "crates/theframework", version = "0.9.1", features = [
    "ui",
], default-features = false }

rusterix = { path = "crates/rusterix", version = "0.9.1" }
codegridfx = { path = "crates/rusterix/codegridfx/lib", version = "0.9.1", package = "codegridfx" }
rusteria = { path = "crates/rusterix/rusteria", version = "0.9.1", package = "rusteria" }
scenevm = { path = "crates/scenevm", version = "0.9.1" }

[workspace.package]
edition = "2024"
version = "0.9.1"
license = "MIT"
authors = ["Markus Moenig"]
description = "A retro-style RPG game creator."
repository = "https://github.com/markusmoenig/Eldiron"
homepage = "https://eldiron.com"
