[workspace]

members = ["creator", "run-wasm", "crates/ruleset", "crates/shared", "crates/source", "clients/client", "clients/client-wgpu", "clients/client-terminal", "crates/rusterix", "crates/rusterix/rusteria", "crates/theframework", "crates/scenevm", "crates/tilegraph", "crates/organicgraph", "crates/buildergraph", "crates/scepter", "crates/icon_builder"]
resolver = "2"

[workspace.dependencies]
theframework = { path = "crates/theframework", version = "0.91.0", features = [
    "ui",
], default-features = false }

rusterix = { path = "crates/rusterix", version = "0.91.0" }
rusteria = { path = "crates/rusterix/rusteria", version = "0.91.0", package = "rusteria" }
scenevm = { path = "crates/scenevm", version = "0.91.0" }

[workspace.package]
edition = "2024"
version = "0.91.0"
license = "MIT"
authors = ["Markus Moenig"]
description = "A retro-style RPG game creator."
repository = "https://github.com/markusmoenig/Eldiron"
homepage = "https://eldiron.com"
