[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
core_shared = { path = "../core_shared" }
core_render = { path = "../core_render" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
env_logger = "0.10"
log = "0.4"
pixels = "0.13.0"
winit = "0.28.7"
winit_input_helper = "0.14"
png = "0.17.5"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
rhai = { version = "1.12.0", default-features = false, features = ["only_i32", "f32_float", "sync"] }
crossbeam-channel = "0.5.6"
futures-util = "0.3.27"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.19.0"

[features]
default = []
embed_binaries = ["dep:core_embed_binaries", "core_render/embed_binaries",  "core_shared/embed_binaries"]
tls = ["tokio-tungstenite/native-tls"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
