[package]
name = "client_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
core_server = { path = "../core_server", features = ["data_editing"] }
core_shared = { path = "../core_shared" }
core_render = { path = "../core_render" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
png = "0.17.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
zeno = "0.2.1"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
pathfinding = "3.0.11"
rhai = "*"
#rhai = { git = "https://github.com/rhaiscript/rhai/" }
regex = "1.5"
directories = "4.0"
fs_extra = "1.2.0"

[features]
default = []
embed_binaries = ["dep:core_embed_binaries", "core_render/embed_binaries",  "core_shared/embed_binaries",  "core_server/embed_binaries"]