[package]
name = "client_standalone_web"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize", "embed_binaries"]
embed_binaries = ["dep:core_embed_binaries", "core_render/embed_binaries",  "core_shared/embed_binaries",  "core_server/embed_binaries"]

[dependencies]
core_server = { path = "../core_server", features = ["data_editing"] }
core_shared = { path = "../core_shared" }
core_render = { path = "../core_render" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
log = "0.4"
pixels = "0.11.0"
wgpu = "0.14.2"
winit = "0.27.5"
winit_input_helper = "0.13"
png = "0.17.5"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
zeno = "0.2.1"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
pathfinding = "4.1.1"
rhai = { version = "*", default-features = false, features = ["only_i32", "f32_float"] }
regex = "1.5"
directories = "4.0"
fs_extra = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Performance", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.2"
