[lib]
name = "core_render"

[package]
name = "core_render"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]

[dependencies]
core_shared = { path = "../core_shared" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
env_logger = "0.9"
log = "0.4"
png = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
rand = "0.8.5"
rhai = "*"
regex = "1.5"
colori = "0.1.1"
audio-engine = "0.2.3"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.15.0"

[features]
default = []
embed_binaries = ["dep:core_embed_binaries"]
