[lib]
name = "core_render"

[package]
name = "core_render"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]

[dependencies]
core_shared = { path = "../core_shared" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
#env_logger = "0.10"
log = "0.4"
png = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
rand = "0.8.5"
rhai = { version = "1.12.0", default-features = true, features = ["only_i32", "f32_float", "sync"] }
regex = "1.7.1"
colori = "0.1.1"
#audio-engine = "0.4.5" #{ git = "https://github.com/Rodrigodd/audio-engine" }
audio-engine = { git = "https://github.com/Rodrigodd/audio-engine" }
rustc-hash = "1.1.0"
raycaster = { path = "../../raycaster/raycaster" }
# raycaster = { path = "../../raycaster/raycaster", features = ["single_threaded"] }

[features]
default = []
embed_binaries = ["dep:core_embed_binaries"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]