[lib]
name = "core_server"
#When building for Xcode
#crate-type = ["staticlib", "cdylib"]

[package]
name = "core_server"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]

[dependencies]
core_shared = { path = "../core_shared" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
rand = "0.8.5"
pathfinding = "3.0.11"
rhai = "*"
#rhai = { git = "https://github.com/rhaiscript/rhai/" }
regex = "1.5"

[features]
default = []
data_editing = []
embed_binaries = ["dep:core_embed_binaries"]