[lib]
name = "core_server"

[package]
name = "core_server"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]

[dependencies]
core_shared = { path = "../core_shared" }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
rand = "0.8.5"
pathfinding = "3.0.11"
rhai = "*"
regex = "1.5"
console_log = "0.2"
crossbeam-channel = "0.5.6"

[features]
default = []
data_editing = []
embed_binaries = ["dep:core_embed_binaries"]
