[lib]
name = "core_shared"

[package]
name = "core_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
core_embed_binaries = { path = "../core_embed_binaries", optional = true }
serde_json = "1.0"
fontdue = "0.7.2"
rand = "0.8.5"
vectorize = "0.2.0"
png = "0.17.2"
env_logger = "0.9"
log = "0.4"
console_log = "0.2"
cpal = "0.14.0"
colors-transform = "0.2.11"
rhai = { version = "*", default-features = true, features = ["only_i32", "f32_float"] }
rustc-hash = "1.1.0"

[features]
default = ["embed_binaries"]
embed_binaries = ["dep:core_embed_binaries"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]