[package]
name = "creator"
version = "0.8.20"
edition = "2021"
authors = ["Markus Moenig"]
description = "A game creator for classical RPGs."

[[bin]]
name = "eldiron"
path = "src/main.rs"

[dependencies]
theframework = { version = "0.1.40", git = "https://github.com/markusmoenig/TheFramework", features = [
    "ui",
], default-features = true }
# theframework = { path = "../../TheFramework", features = [
#     "ui",
#     # "winit_app",
# ], default-features = true }
# theframework = { version = "0.1.20", features = [
#     "ui",
#     "code",
# ], default-features = true }
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
rayon = "1"
png = "0.17"
open = "5.0.1"
fontdue = "0.8.0"
self_update = { version = "0.39.0", features = [
    "archive-tar",
    "compression-flate2",
] }
indexmap = { version = "2", features = ["serde"], default-features = true }
vek = { version = "0.17.1", default-features = true }
regex = "1.11.1"
# rusterix = { path = "../../rusterix" }
rusterix = { version = "0.2.8", git = "https://github.com/markusmoenig/Rusterix" }

[package.metadata.bundle]
name = "Eldiron"
identifier = "com.moenig.eldiron"
icon = ["../build/Eldiron.icns"]
resources = []
copyright = "Copyright (c) Markus Moenig 2024. All rights reserved."
category = "Game"
short_description = "A game creator for classical RPGs with modern features."
long_description = """
Create classical RPGs with Eldiron.
"""

# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]

# vek = { version = "0.17", default-features = false, features = ["rgba"] }
# euc = { git = "https://github.com/zesterer/euc" }
