[package]
name = "eldiron-creator"
edition = "2024"
version = "0.8.100"
license = "MIT"
authors = ["Markus Moenig"]
description = "A game creator for classical RPGs."
repository = "https://github.com/markusmoenig/Eldiron"
homepage = "https://eldiron.com"
keywords = ["game", "rpg", "creator", "engine", "eldiron"]
readme = "README.md"

[[bin]]
name = "eldiron-creator"
path = "src/main.rs"

[dependencies]
rusterix.workspace = true
codegridfx.workspace = true
rusteria.workspace = true
scenevm.workspace = true

shared = { path = "../crates/shared", version = "0.8.100", package = "eldiron-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
rayon = "1"
png = "0.18"
open = "5.0.1"
fontdue = "0.9.3"
indexmap = { version = "2", features = ["serde"], default-features = true }
vek = { version = "0.17.1", default-features = true }
regex = "1.11.1"
arboard = "3.4.1"
toml = "0.8.20"
rand = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
theframework = { workspace = true, features = ["ui", "i18n"] }
lazy_static = "1.5.0"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { version = "0.10.0" }
self_update = { version = "0.39.0", optional = true, features = [
    "archive-zip",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
theframework = { workspace = true, features = ["ui"] }

[package.metadata.bundle.bin.eldiron-creator]
name = "Eldiron Creator"
identifier = "com.moenig.eldiron"
icon = ["../build/Eldiron.icns"]
resources = []
copyright = "Copyright (c) Markus Moenig 2025. All rights reserved."
category = "Game"
short_description = "A game creator for classical RPGs with modern features."
long_description = """
Create classical RPGs with Eldiron.
"""

# cargo build -p eldiron-creator --lib --release --features staticlib
[lib]
name = "rustapi"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[features]
default = []
log = ["theframework/log"]
self-update = ["dep:self_update"]
staticlib = []
