[package]
name = "eldiron-creator"
edition = "2024"
version = "0.9.5"
license = "MIT"
authors = ["Markus Moenig"]
description = "A game creator for classical RPGs."
repository = "https://github.com/markusmoenig/Eldiron"
homepage = "https://eldiron.com"
keywords = ["game", "rpg", "creator", "engine", "eldiron"]
readme = "README.md"

[[bin]]
name = "eldiron-creator"
path = "src/main.rs"

[dependencies]
rusterix.workspace = true
organicgraph = { path = "../crates/organicgraph", version = "0.9.5" }
codegridfx.workspace = true
rusteria.workspace = true
scenevm = { path = "../crates/scenevm", version = "0.9.5", default-features = false, features = ["gpu"] }

shared = { path = "../crates/shared", version = "0.9.5", package = "eldiron-shared", default-features = false, features = ["graphics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
rayon = "1"
png = "0.18"
open = "5.0.1"
fontdue = "0.9.3"
indexmap = { version = "2", features = ["serde"], default-features = true }
vek = { version = "0.17.1", default-features = true }
regex = "1.11.1"
arboard = "3.4.1"
toml = "0.8.20"
rand = "0.9"
ureq = "2.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
theframework = { path = "../crates/theframework", version = "0.9.5", default-features = false, features = ["ui", "i18n"] }
lazy_static = "1.5.0"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { version = "0.10.0" }
self_update = { version = "0.39.0", optional = true, features = [
    "archive-zip",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
theframework = { path = "../crates/theframework", version = "0.9.5", default-features = false, features = ["ui"] }

[package.metadata.bundle.bin.eldiron-creator]
name = "Eldiron Creator"
identifier = "com.moenig.eldiron"
icon = ["../build/Eldiron.icns"]
resources = []
copyright = "Copyright (c) Markus Moenig 2025. All rights reserved."
category = "Game"
short_description = "A creator for retro RPGs in text, 2D, and 3D."
long_description = """
Create retro RPGs and interactive-fiction worlds with Eldiron.
Build games that can be played in text, 2D, and 3D.
"""
# cargo build -p eldiron-creator --lib --release --no-default-features --features staticlib
[lib]
name = "eldiron_creator"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[features]
default = ["desktop"]
desktop = ["theframework/winit_app"]
log = ["theframework/log"]
self-update = ["dep:self_update"]
staticlib = []
