[package]
name = "creator_lib"
version = "0.7.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_server = { path = "../core_server", features = ["data_editing"] }
core_shared = { path = "../core_shared" }
core_render = { path = "../core_render" }
lazy_static = "1.4.0"
env_logger = "0.10"
log = "0.4"
png = "0.17.5"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.90"
fontdue = "0.7.2"
vectorize = "0.2.0"
itertools = "0.10.2"
zeno = "0.2.1"
rand = "0.8.5"
pathfinding = "4.1.1"
#rhai = { version = "1.11.0", default-features = true, features = ["only_i32", "f32_float", "sync"] }
rhai = { git = "https://github.com/rhaiscript/rhai/", default-features = true, features = ["only_i32", "f32_float", "sync"] }
#rhai = { git = "https://github.com/rhaiscript/rhai/" }
regex = "1.5"
fs_extra = "1.3.0"
open = "4.0.0"
copypasta = "0.8.1"
code_editor = "0.3.9"
#code_editor = { path = "../../code_editor/code_editor" }
rfd = "0.11.2"
#audio-engine = "0.4.5"
audio-engine = { git = "https://github.com/Rodrigodd/audio-engine" }
futures = "0.3"
rustc-hash = "1.1.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[package.metadata.bundle]
name = "Eldiron"
identifier = "com.moenig.eldiron"
icon = ["../Eldiron.icns"]
resources = ["../assets", "../game", "../resources"]
copyright = "Copyright (c) Markus Moenig 2022. All rights reserved."
category = "Game"
short_description = "A game creator for classic RPGs."
long_description = """
Create classic RPGs with Eldiron.
"""

# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]

[features]
linux_release = ["core_shared/linux_release"]
