[package]
name = "creator_main"
version = "0.7.5"
edition = "2021"
authors = ["Markus Moenig"]
description = "A game creator for classic RPGs."

[dependencies]
creator_lib = { path = "../creator_lib" }
env_logger = "0.10"
log = "0.4"
pixels = "0.11.0"
winit = "0.27.5"
winit_input_helper = "0.13"
directories = "4.0"

[package.metadata.bundle]
name = "Eldiron"
identifier = "com.moenig.eldiron"
icon = ["../Eldiron.icns"]
resources = ["../assets", "../game", "../resources"]
copyright = "Copyright (c) Markus Moenig 2022. All rights reserved."
category = "Game"
short_description = "A game creator for classic RPGs."
long_description = """
Create classic RPGs with Eldiron.
"""
