[package]
name = "creator_main"
version = "0.8.2"
edition = "2021"
authors = ["Markus Moenig"]
description = "A game creator for classic RPGs."

[dependencies]
creator_lib = { path = "../creator_lib" }
env_logger = "0.10"
log = "0.4"
pixels = "0.12.0"
winit = "0.28.3"
winit_input_helper = "0.14"
directories = "5.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
image_rs = { version = "0.24.6", package = "image" }

[package.metadata.bundle]
name = "Eldiron"
identifier = "com.moenig.eldiron"
icon = ["../build/Eldiron.icns"]
resources = ["../assets", "../game", "../resources"]
copyright = "Copyright (c) Markus Moenig 2022. All rights reserved."
category = "Game"
short_description = "A game creator for classic RPGs."
long_description = """
Create classic RPGs with Eldiron.
"""

[features]
linux_release = ["creator_lib/linux_release"]
