[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
message-io = "0.14"
core_server = { path = "../core_server", features = ["data_editing"] }
core_shared = { path = "../core_shared" }
env_logger = "0.10"
log = "0.4"
png = "0.17.5"
vectorize = "0.2.0"
itertools = "0.10.2"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
rhai = { version = "1.12.0", default-features = false, features = ["only_i32", "f32_float", "sync"] }

[features]
default = []
