[package]
name = "shared"
version = "0.8.14"
edition = "2021"

[dependencies]
# theframework = { path = "../../TheFramework", features = ["ui", "code"] }
# theframework = { path = "../../TheFramework", features = [
#     "ui",
#     "code",
#     "winit_app",
# ], default-features = false }
theframework = { git = "https://github.com/markusmoenig/TheFramework", features = [
    "ui",
    "code",
], default-features = true }
# theframework = { version = "0.1.20", features = [
#     "ui",
#     "code",
# ], default-features = true }
# forgedtiles = { path = "../../ForgedTiles/forgedtiles" }
forgedtiles = { git = "https://github.com/markusmoenig/ForgedTiles" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rayon = "1"
lazy_static = "1.4"
rand = "0.8.5"
fontdue = "0.8.0"
line_drawing = "1.0.0"
indexmap = { version = "2", features = ["serde"], default-features = true }
noiselib = "0.2.3"
regex = "1"
num_cpus = "1.16.0"
half = { version = "2.4", features = ["serde"] }

vek = { version = "0.17", default-features = false, features = ["rgba"] }
euc = { git = "https://github.com/zesterer/euc" }
earcutr = "0.4"
