[package]
name = "shared"
version = "0.8.14"
edition = "2021"

[dependencies]
# theframework = { path = "../../TheFramework", features = ["ui", "code"] }
# theframework = { path = "../../TheFramework", features = [
#     "ui",
# ], default-features = true }
theframework = { version = "0.1.40", git = "https://github.com/markusmoenig/TheFramework", features = [
    "ui",
], default-features = true }
# theframework = { version = "0.1.20", features = [
#     "ui",
#     "code",
# ], default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rayon = "1"
rand = "0.8.5"
fontdue = "0.8.0"
line_drawing = "1.0.0"
indexmap = { version = "2", features = ["serde"], default-features = true }
noiselib = "0.2.3"
regex = "1"
num_cpus = "1.16.0"
# rusterix = "0.1.0"
# rusterix = { path = "../../rusterix" }
rusterix = { version = "0.2.8", git = "https://github.com/markusmoenig/Rusterix" }

vek = { version = "0.17", default-features = false, features = ["rgba"] }
earcutr = "0.4"
rect_packer = "0.2.1"
