[package]
name = "solo"
edition = "2024"

[dependencies]
theframework.workspace = true
rusterix.workspace = true

shared = { path = "../../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
png = "0.17"
fontdue = "0.9.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Window'] }
console_error_panic_hook = "0.1"
instant = { version = "0.1", features = ["wasm-bindgen"] }

#
# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]
