[package]
name = "organicgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Reusable organic brush graph assets for Eldiron."
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
vek = { version = "0.17.1", default-features = true }
image = "0.25.5"
serde_json = "1.0"
toml = "0.9.5"
